@@ -14,49 +14,50 @@ package org.openhab.binding.synopanalyzer.internal.discovery;
 
 import static org.openhab.binding.synopanalyzer.internal.SynopAnalyzerBindingConstants.THING_SYNOP;
 
-import java.util.Collections;
-import java.util.Comparator;
-import java.util.HashMap;
-import java.util.LinkedHashMap;
+import java.util.Iterator;
+import java.util.List;
 import java.util.Map;
-import java.util.Optional;
-import java.util.stream.Collectors;
+import java.util.Map.Entry;
+import java.util.Set;
+import java.util.TreeMap;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
 import org.openhab.binding.synopanalyzer.internal.config.SynopAnalyzerConfiguration;
-import org.openhab.binding.synopanalyzer.internal.synop.StationDB;
-import org.openhab.binding.synopanalyzer.internal.synop.StationDB.Station;
+import org.openhab.binding.synopanalyzer.internal.stationdb.Station;
+import org.openhab.binding.synopanalyzer.internal.stationdb.StationDbService;
 import org.openhab.core.config.discovery.AbstractDiscoveryService;
 import org.openhab.core.config.discovery.DiscoveryResultBuilder;
+import org.openhab.core.config.discovery.DiscoveryService;
 import org.openhab.core.i18n.LocationProvider;
-import org.openhab.core.library.types.DecimalType;
 import org.openhab.core.library.types.PointType;
 import org.openhab.core.thing.ThingUID;
+import org.osgi.service.component.annotations.Activate;
+import org.osgi.service.component.annotations.Component;
+import org.osgi.service.component.annotations.Reference;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 /**
- * The {@link SynopAnalyzerDiscoveryService} creates things based on the configured location.
+ * The {@link SynopAnalyzerDiscoveryService} discovers synop stations based on the configured location.
  *
  * @author Gaël L'hopital - Initial Contribution
  */
+@Component(service = DiscoveryService.class)
 @NonNullByDefault
 public class SynopAnalyzerDiscoveryService extends AbstractDiscoveryService {
-    private static final int DISCOVER_TIMEOUT_SECONDS = 5;
+    private static final int DISCOVER_TIMEOUT_SECONDS = 2;
 
     private final Logger logger = LoggerFactory.getLogger(SynopAnalyzerDiscoveryService.class);
-    private final Map<Integer, Double> distances = new HashMap<>();
     private final LocationProvider locationProvider;
-    private final StationDB stationDB;
+    private final List<Station> stations;
+    private double radius = 0;
 
-    /**
-     * Creates a SynopAnalyzerDiscoveryService with enabled autostart.
-     *
-     */
-    public SynopAnalyzerDiscoveryService(StationDB stationDB, LocationProvider locationProvider) {
-        super(Collections.singleton(THING_SYNOP), DISCOVER_TIMEOUT_SECONDS);
+    @Activate
+    public SynopAnalyzerDiscoveryService(@Reference StationDbService dBService,
+            @Reference LocationProvider locationProvider) {
+        super(Set.of(THING_SYNOP), DISCOVER_TIMEOUT_SECONDS);
         this.locationProvider = locationProvider;
-        this.stationDB = stationDB;
+        this.stations = dBService.getStations();
     }
 
     @Override
@@ -71,23 +72,29 @@ public class SynopAnalyzerDiscoveryService extends AbstractDiscoveryService {
     }
 
     public void createResults(PointType serverLocation) {
-        distances.clear();
+        Map<Double, Station> distances = new TreeMap<>();
 
-        stationDB.stations.forEach(s -> {
-            PointType stationLocation = new PointType(s.getLocation());
-            DecimalType distance = serverLocation.distanceFrom(stationLocation);
-            distances.put(s.idOmm, distance.doubleValue());
+        stations.forEach(station -> {
+            PointType stationLocation = new PointType(station.getLocation());
+            double distance = serverLocation.distanceFrom(stationLocation).doubleValue();
+            if (distance > radius) {
+                distances.put(distance, station);
+            }
         });
 
-        Map<Integer, Double> result = distances.entrySet().stream()
-                .sorted(Map.Entry.comparingByValue(Comparator.naturalOrder())).collect(Collectors.toMap(
-                        Map.Entry::getKey, Map.Entry::getValue, (oldValue, newValue) -> oldValue, LinkedHashMap::new));
+        Iterator<Entry<Double, Station>> stationIterator = distances.entrySet().iterator();
+        if (stationIterator.hasNext()) {
+            Entry<Double, Station> nearest = stationIterator.next();
+            Station station = nearest.getValue();
+            radius = nearest.getKey();
 
-        Integer nearestId = result.entrySet().iterator().next().getKey();
-        Optional<Station> station = stationDB.stations.stream().filter(s -> s.idOmm == nearestId).findFirst();
-        thingDiscovered(DiscoveryResultBuilder.create(new ThingUID(THING_SYNOP, nearestId.toString()))
-                .withLabel(String.format("Synop : %s", station.get().usualName))
-                .withProperty(SynopAnalyzerConfiguration.STATION_ID, nearestId)
-                .withRepresentationProperty(SynopAnalyzerConfiguration.STATION_ID).build());
+            thingDiscovered(DiscoveryResultBuilder.create(new ThingUID(THING_SYNOP, Integer.toString(station.idOmm)))
+                    .withLabel(String.format("Synop : %s", station.usualName))
+                    .withProperty(SynopAnalyzerConfiguration.STATION_ID, station.idOmm)
+                    .withRepresentationProperty(SynopAnalyzerConfiguration.STATION_ID).build());
+        } else {
+            logger.info("No Synop station available at a radius higher than {} m - resetting to 0 m", radius);
+            radius = 0;
+        }
     }
 }
